--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,8 @@
     --second-bg-color: #323946;
     --text-color: #fff;
     --main-color: #0ef;
+    --d: 700ms;
+    --e: cubic-bezier(0.19, 1, 0.22, 1);
 }
 
 html{
@@ -38,7 +40,7 @@ body{
 .background {
   position: fixed;
   inset: 0;
-  z-index: -100000; /* 👈 lo envía detrás del resto */
+  z-index: -10;
   background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='120' height='120'><rect width='120' height='120' fill='none' stroke='rgba(255,255,255,0.05)' stroke-width='1'/></svg>");
   background-repeat: repeat;
   background-size: 120px 120px;
@@ -55,13 +57,17 @@ section{
   width: 1200px;
   height: 1200px;
   border-radius: 50%;
-  pointer-events: none; /* que no interfiera con clics */
+  pointer-events: none;
   background: radial-gradient(circle, rgba(0, 50, 215, 0.205) 0%, transparent 50%);
   transform: translate(-50%, -50%);
-  transition: transform 0.1s ease-out; /* suavizado opcional */
-  mix-blend-mode: difference; /* opcional para efecto distinto */
+  transition: transform 0.1s ease-out;
+  mix-blend-mode: difference;
   z-index: -10;
 }
+
+/*====================================================================================================*/
+/*==================================== HEADER SECTION STYLES =========================================*/
+/*====================================================================================================*/
 
 .header{
     display: flex;
@@ -95,8 +101,8 @@ section{
     margin-left: 1rem;
 }
 
-.navbar a:nth-child(4){
-    margin-right: 3rem;
+.navbar a:nth-child(5){
+    margin-right: 2rem;
 }
 
 .navbar a{
@@ -138,6 +144,10 @@ section{
     color: var(--text-color);
     display: none;
 }
+
+/*====================================================================================================*/
+/*====================================== HOME SECTION STYLES =========================================*/
+/*====================================================================================================*/
 
 .home{
     display: flex;
@@ -185,7 +195,6 @@ section{
     width: 100%;
     height: 100%;
     object-fit: cover;
-
 }
 
 .social-bar a:hover {
@@ -233,6 +242,7 @@ span{
     opacity: 1;
   }
 }
+
 /*====================================================================================================*/
 /*==================================== ABOUT SECTION STYLES ==========================================*/
 /*====================================================================================================*/
@@ -240,7 +250,7 @@ span{
 .about{
     display: block;
     user-select: none;
-    scroll-margin-top: 4rem;
+    scroll-margin-top: 4.5rem;
     max-width: 100rem;
     margin: 0 auto;
 }
@@ -263,7 +273,6 @@ span{
     font-weight: bold;
     letter-spacing: 3px;
     text-transform: uppercase;
-    /* margin-top: 3rem; */
 }
 
 .title-container span{
@@ -283,7 +292,7 @@ span{
     display: inline-block;
     text-align: center;
     font-size: clamp(1rem, 0.945rem + 0.353vw, 1.6rem);
-    margin-bottom: 3em;
+    margin: 0 8% 3em 8%;
 }
 
 .about-container{
@@ -462,7 +471,6 @@ span{
 
 @keyframes scroll-down {
   0% {
-    /* top:20%; */
     opacity: 0;
   }
   30% {
@@ -511,7 +519,213 @@ span{
     transition: .5s ease;
 }
 
-/* Services Section Styles */
+/*====================================================================================================*/
+/*================================== SERVICES SECTION STYLES =========================================*/
+/*====================================================================================================*/
+
+.services{
+    display: block;
+    user-select: none;
+    scroll-margin-top: 4.5rem;
+    max-width: 100rem;
+    margin: 0 auto;
+}
+
+.services-title{
+    font-size: clamp(2.5rem, 1.5rem + 1.248vw, 3.5rem);
+    font-weight: bold;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+    text-align: center;
+}
+
+.cards-container {
+    display: grid;
+    grid-gap: 3rem;
+    padding: 1rem;
+    max-width: 1200px;
+    margin: 0 auto;
+    font-family: var(--font-sans);
+    place-items: center;
+}
+
+@media (min-width: 600px) {
+    .cards-container {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (min-width: 800px) {
+    .cards-container {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+.card {
+    position: relative;
+    display: flex;
+    align-items: flex-end;
+    overflow: hidden;
+    padding: 1rem;
+    width: 100%;
+    text-align: center;
+    color: whitesmoke;
+    background-color: whitesmoke;
+    box-shadow: 5px 5px 10px rgb(0, 0, 0), 5px 5px 10px rgba(255, 255, 255, 0.1), 0 4px 4px rgba(0, 0, 0, 0.1), 0 8px 8px rgba(0, 0, 0, 0.1), 0 16px 16px rgba(0, 0, 0, 0.1);
+}
+
+@media (min-width: 600px) {
+  .card {
+    height: 500px;
+  }
+}
+
+.card:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 110%;
+    background-size: cover;
+    background-position: 0 0;
+    transition: transform calc(var(--d) * 1.5) var(--e);
+    pointer-events: none;
+}
+
+.card:after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 200%;
+    pointer-events: none;
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.009) 11.7%, rgba(0, 0, 0, 0.034) 22.1%, rgba(0, 0, 0, 0.072) 31.2%, rgba(0, 0, 0, 0.123) 39.4%, rgba(0, 0, 0, 0.182) 46.6%, rgba(0, 0, 0, 0.249) 53.1%, rgba(0, 0, 0, 0.32) 58.9%, rgba(0, 0, 0, 0.394) 64.3%, rgba(0, 0, 0, 0.468) 69.3%, rgba(0, 0, 0, 0.54) 74.1%, rgba(0, 0, 0, 0.607) 78.8%, rgba(0, 0, 0, 0.668) 83.6%, rgba(0, 0, 0, 0.721) 88.7%, rgba(0, 0, 0, 0.762) 94.1%, rgba(0, 0, 0, 0.79) 100%);
+    transform: translateY(-50%);
+    transition: transform calc(var(--d) * 2) var(--e);
+}
+
+.card:nth-child(1):before {
+  background-image: url(https://images.unsplash.com/photo-1517021897933-0e0319cfbc28?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ);
+}
+
+.card:nth-child(2):before {
+  background-image: url(https://images.unsplash.com/photo-1533903345306-15d1c30952de?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ);
+}
+
+.card:nth-child(3):before {
+  background-image: url(https://images.unsplash.com/photo-1545243424-0ce743321e11?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ);
+}
+
+.card:nth-child(4):before {
+  background-image: url(https://images.unsplash.com/photo-1531306728370-e2ebd9d7bb99?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ);
+}
+
+.content {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  padding: 1rem;
+  transition: transform var(--d) var(--e);
+  z-index: 1;
+}
+
+.content > * + * {
+  margin-top: 1rem;
+}
+
+.title {
+  font-size: 1.3rem;
+  font-weight: bold;
+  line-height: 1.2;
+}
+
+.copy {
+  font-family: var(--font-serif);
+  font-size: 1.125rem;
+  font-style: italic;
+  line-height: 1.35;
+}
+
+.btn-card {
+  cursor: pointer;
+  margin-top: 1.5rem;
+  padding: 0.75rem 1.5rem;
+  font-size: 0.65rem;
+  font-weight: bold;
+  letter-spacing: 0.025rem;
+  text-transform: uppercase;
+  color: white;
+  background-color: black;
+  border: none;
+}
+
+.btn-card:hover {
+    background-color: #afafaf;
+}
+
+.btn-card:focus {
+  outline: 1px dashed yellow;
+  outline-offset: 3px;
+}
+
+@media (hover: hover) and (min-width: 600px) {
+.card:after {
+transform: translateY(0);
+}
+
+.content {
+transform: translateY(calc(100% - 4.5rem));
+}
+.content > *:not(.title) {
+opacity: 0;
+transform: translateY(1rem);
+transition: transform var(--d) var(--e), opacity var(--d) var(--e);
+}
+
+.card:hover,
+.card:focus-within {
+align-items: center;
+}
+
+.card:hover:before,
+.card:focus-within:before {
+transform: translateY(-4%);
+}
+
+.card:hover:after,
+.card:focus-within:after {
+transform: translateY(-50%);
+}
+
+.card:hover .content,
+.card:focus-within .content {
+transform: translateY(0);
+}
+
+.card:hover .content > *:not(.title),
+.card:focus-within .content > *:not(.title) {
+opacity: 1;
+transform: translateY(0);
+transition-delay: calc(var(--d) / 8);
+}
+
+.card:focus-within:before, .card:focus-within:after,
+.card:focus-within .content,
+.card:focus-within .content > *:not(.title) {
+transition-duration: 0s;
+}
+}
+
+
+
+
+
+
 
 /*====================================================================================================*/
 /*================================== PORTFOLIO SECTION STYLES ========================================*/
@@ -528,6 +742,7 @@ span{
     display: inline-block;
     text-align: center;
     font-size: clamp(1rem, 0.945rem + 0.353vw, 1.6rem);
+    margin: 0 8% 0 8%;
 }
 
 .project-container{
