--- a/css/style.css
+++ b/css/style.css
@@ -608,7 +608,9 @@ span{
 }
 
 .card:nth-child(1):before {
-  background-image: url(https://images.unsplash.com/photo-1517021897933-0e0319cfbc28?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ);
+    background-image: url(/images/asis.jpg);
+    background-position: center;
+    background-size: cover;
 }
 
 .card:nth-child(2):before {
@@ -617,10 +619,6 @@ span{
 
 .card:nth-child(3):before {
   background-image: url(https://images.unsplash.com/photo-1545243424-0ce743321e11?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ);
-}
-
-.card:nth-child(4):before {
-  background-image: url(https://images.unsplash.com/photo-1531306728370-e2ebd9d7bb99?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ);
 }
 
 .content {
@@ -634,21 +632,26 @@ span{
   z-index: 1;
 }
 
-.content > * + * {
-  margin-top: 1rem;
+.card-title {
+    font-size: 1.3rem;
+    font-weight: bold;
+    line-height: 1.2;
+    margin: .5rem 0;
 }
 
-.title {
-  font-size: 1.3rem;
-  font-weight: bold;
-  line-height: 1.2;
+.card-subtitle{
+    font-size: 1.1rem;
+    font-weight: 500;
+    line-height: 1.2;
+    margin: .5rem 0;
+
 }
 
-.copy {
+.card-description {
   font-family: var(--font-serif);
-  font-size: 1.125rem;
-  font-style: italic;
-  line-height: 1.35;
+  font-size: 1rem;
+  line-height: 1.2;
+  margin: .3rem 0;
 }
 
 .btn-card {
@@ -681,7 +684,7 @@ transform: translateY(0);
 .content {
 transform: translateY(calc(100% - 4.5rem));
 }
-.content > *:not(.title) {
+.content > *:not(.card-title) {
 opacity: 0;
 transform: translateY(1rem);
 transition: transform var(--d) var(--e), opacity var(--d) var(--e);
@@ -707,8 +710,8 @@ transform: translateY(-50%);
 transform: translateY(0);
 }
 
-.card:hover .content > *:not(.title),
-.card:focus-within .content > *:not(.title) {
+.card:hover .content > *:not(.card-title),
+.card:focus-within .content > *:not(.card-title) {
 opacity: 1;
 transform: translateY(0);
 transition-delay: calc(var(--d) / 8);
@@ -716,7 +719,7 @@ transition-delay: calc(var(--d) / 8);
 
 .card:focus-within:before, .card:focus-within:after,
 .card:focus-within .content,
-.card:focus-within .content > *:not(.title) {
+.card:focus-within .content > *:not(.card-title) {
 transition-duration: 0s;
 }
 }
