--- a/css/style.css
+++ b/css/style.css
@@ -550,7 +550,7 @@ span {
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 1rem;
     width: 100%;
-    margin: 0 auto;
+    margin: 3rem 0;
 }
 
 .text-shadow {
@@ -562,19 +562,28 @@ span {
 .back-title {
     text-align: center;
     text-transform: uppercase;
-    margin-bottom: .2rem;
+    margin-bottom: .5rem;
+    text-shadow: 3px 3px 5px rgb(0, 255, 225);
 }
 
-.back-subtitle {
-    text-align: center;
-    margin-bottom: .5rem;
-    text-transform: uppercase;
+.card-linea {
+    display: block;
+    width: 60%;
+    height: 2px;
+    background-color: #00bcd4;
+    margin: .2rem auto 1rem auto;
+    border-radius: 2px;
 }
 
 .back-info {
-    /* text-align: center; */
     margin-bottom: .5rem;
-    font-size: 5rem;
+    font-size: 1rem;
+    color: whitesmoke;
+}
+
+.back-items {
+    list-style-type: none;
+    margin-left: 1rem;
 }
 
 .flip {
@@ -601,12 +610,12 @@ span {
 
 .flip>.front,
 .flip>.back {
-    display: flex;
-    justify-content: center;
-    align-content: center;
     transition-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
     transition-duration: 1s;
     transition-property: transform, opacity;
+    /* border: 1px solid red; */
+    box-shadow: 10px 10px 12px rgb(0, 0, 0);
+    border: 1px solid rgba(184, 184, 184, 0.338);
 }
 
 .flip>.front {
@@ -654,28 +663,53 @@ span {
 
 .flip>.front,
 .flip>.back {
-    display: block;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
     color: white;
-    width: inherit;
     background-size: cover !important;
     background-position: center !important;
     height: 520px;
     padding: 1em;
-    background: #313131;
     border-radius: 10px;
 }
 
-.flip>.front p,
-.flip>.back p {
-    font-size: 0.9125rem;
-    line-height: 160%;
-    color: #999;
+.flip>.front{
+    justify-content: flex-end;
 }
 
-.text-shadow {
-    text-shadow: 3px 3px 2px rgba(0, 0, 0, .8);
+
+.flip:nth-of-type(1) .back {
+    background:
+        linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.8)),
+        url('/images/landing.jpg');
 }
 
+.flip:nth-of-type(2) .back {
+    background:
+        linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.8)),
+        url('/images/institucional.jpg');
+}
+
+.flip:nth-of-type(3) .back {
+    background:
+        linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.8)),
+        url('/images/maintenance.jpg');
+}
+
+.back p:last-of-type{
+    margin-top: 1rem;
+    font-style: italic;
+    text-align: center;
+    color: rgb(255, 234, 0);
+}
+
+.card-button {
+    align-self: center;
+    margin: 1rem 0 0 0;    letter-spacing: 1px;
+    padding: .7rem 2rem;
+    font-size: 1.1rem;
+}
 
 
 
@@ -696,7 +730,6 @@ span {
     display: inline-block;
     text-align: center;
     font-size: clamp(1rem, 0.945rem + 0.353vw, 1.6rem);
-    margin: 0 8% 0 8%;
 }
 
 .project-container {
