--- a/css/style.css
+++ b/css/style.css
@@ -155,6 +155,7 @@ section {
     justify-content: center;
     align-items: center;
     user-select: none;
+
 }
 
 .home-content {
@@ -163,7 +164,6 @@ section {
     flex-direction: column;
     width: 100%;
     margin: 0 5%;
-
 }
 
 .social-bar {
@@ -179,6 +179,16 @@ section {
     border-radius: 5px;
     box-shadow: 5px 5px 10px rgb(85, 85, 85);
     z-index: 100;
+
+
+
+
+
+
+
+
+
+    display: none;
 }
 
 .social-bar a {
@@ -205,7 +215,7 @@ section {
 }
 
 .home-title {
-    font-size: clamp(2.5rem, 2rem + 2.25vw, 6rem);
+    font-size: clamp(2rem, 1.367rem + 2.896vw, 6rem);
     font-weight: 700;
     line-height: 1.3;
     font-family: "Roboto Slab", serif;
@@ -598,19 +608,19 @@ span {
 .flip:nth-of-type(1) .front {
     background:
         linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.3)),
-        url('/images/landing.jpg');
+        url('../images/landing.jpg');
 }
 
 .flip:nth-of-type(2) .front {
     background:
         linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.3)),
-        url('/images/institucional.jpg');
+        url('../images/institucional.jpg');
 }
 
 .flip:nth-of-type(3) .front {
     background:
         linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.3)),
-        url('/images/maintenance.jpg');
+        url('../images/maintenance.jpg');
 }
 
 .flip>.front,
@@ -689,19 +699,19 @@ span {
 .flip:nth-of-type(1) .back {
     background:
         linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.8)),
-        url('/images/landing.jpg');
+        url('../images/landing.jpg');
 }
 
 .flip:nth-of-type(2) .back {
     background:
         linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.8)),
-        url('/images/institucional.jpg');
+        url('../images/institucional.jpg');
 }
 
 .flip:nth-of-type(3) .back {
     background:
         linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.8)),
-        url('/images/maintenance.jpg');
+        url('../images/maintenance.jpg');
 }
 
 .flip:nth-child(1) .back p:nth-last-of-type(3),
@@ -1184,11 +1194,18 @@ span {
     }
 
 }
+@media (max-width: 617px) {
 
-@media (max-width: 617px) {}
+}
 
-@media (max-width: 450px) {}
+@media (max-width: 450px) {
 
-@media (max-width: 375px) {}
+}
 
-@media (max-width: 320px) {}
+@media (max-width: 375px) {
+
+}
+
+@media (max-width: 320px) {
+    
+}
