--- a/css/style.css
+++ b/css/style.css
@@ -46,10 +46,10 @@ body {
     background-repeat: repeat;
     background-size: 120px 120px;
 }
-
+/* 
 section {
     min-height: 100vh;
-}
+} */
 
 /* EFECTO BRIGHT MOUSE */
 
@@ -155,7 +155,8 @@ section {
     justify-content: center;
     align-items: center;
     user-select: none;
-
+    position: relative;
+    min-height: 100vh;
 }
 
 .home-content {
@@ -166,29 +167,34 @@ section {
     margin: 0 5%;
 }
 
+.img-container{
+    position: absolute;
+    background: url(/images/background2.png);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    height: 100vh;
+    width: 100%;
+    opacity: .05;
+    z-index: -1;
+    mask-image: linear-gradient(to bottom, black 60%, transparent 100%);
+    -webkit-mask-image: linear-gradient(to bottom, black 60%, transparent 100%);
+}
+
 .social-bar {
+    display: flex;
+    flex-direction: column;
     position: absolute;
     top: 50%;
     left: .5rem;
     transform: translateY(-50%);
-    display: flex;
-    flex-direction: column;
     gap: 0.7rem;
     padding: .5rem;
     background-color: rgb(37, 37, 37);
     border-radius: 5px;
-    box-shadow: 5px 5px 10px rgb(85, 85, 85);
+    border: 1px solid rgba(125, 125, 125, 0.391);
+    box-shadow: 5px 5px 15px rgb(0, 0, 0);
     z-index: 100;
-
-
-
-
-
-
-
-
-
-    display: none;
 }
 
 .social-bar a {
@@ -215,18 +221,22 @@ section {
 }
 
 .home-title {
-    font-size: clamp(2rem, 1.367rem + 2.896vw, 6rem);
+    font-size: clamp(3rem, 1.927rem + 2.545vw, 6rem);
     font-weight: 700;
     line-height: 1.3;
     font-family: "Roboto Slab", serif;
     letter-spacing: 7px;
     text-transform: uppercase;
     margin-bottom: 3rem;
+    text-align: center;
+    text-shadow: 5px 5px 5px rgb(0, 0, 0);
 }
 
 .home-multiple {
     font-size: clamp(1.8rem, 1.657rem + 0.952vw, 2.7rem);
     font-weight: 700;
+    text-align: center;
+    text-shadow: 5px 5px 5px rgb(0, 0, 0);
 }
 
 .social-media {
@@ -240,7 +250,7 @@ span {
 .blur-in {
     filter: blur(10px);
     opacity: 0;
-    animation: blurIn 2s ease forwards;
+    animation: blurIn 2.5s ease forwards;
 }
 
 @keyframes blurIn {
@@ -264,18 +274,21 @@ span {
     user-select: none;
     scroll-margin-top: 4.5rem;
     max-width: 100rem;
+    min-height: 90vh;
     margin: 0 auto;
 }
 
-.title-container {
+.about-title {
     display: flex;
     text-align: center;
     justify-content: center;
+    margin-top: 5rem;
     align-items: center;
 }
 
 .heading,
 .title-container span,
+.about-title span,
 .heading-contact {
     font-size: clamp(2.5rem, 1.5rem + 1.248vw, 3.5rem);
     font-weight: bold;
@@ -283,6 +296,12 @@ span {
     text-transform: uppercase;
 }
 
+.title-container{
+    display: flex;
+    justify-content: center;
+}
+
+.about-title span,
 .title-container span {
     margin-left: 20px;
 }
@@ -292,8 +311,8 @@ span {
     width: 3%;
     height: 5px;
     background-color: #00bcd4;
-    margin: 2rem auto;
     border-radius: 2px;
+    margin: 2rem auto;
 }
 
 .about-intro {
@@ -307,9 +326,10 @@ span {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 6rem;
+    margin: 0 4rem;
 }
 
-.about-title,
+.about-text-title,
 .skills-title {
     font-size: clamp(1rem, 0.889rem + 0.907vw, 1.8rem);
     margin-bottom: 2rem;
@@ -367,7 +387,7 @@ span {
     transition: .5s ease;
     position: relative;
     overflow: hidden;
-    margin: 3rem 1rem;
+    margin: 3rem 5rem;
     z-index: 1;
 }
 
@@ -549,6 +569,7 @@ span {
     letter-spacing: 3px;
     text-transform: uppercase;
     text-align: center;
+    margin-top: 3rem;
 }
 
 .services-intro{
@@ -562,10 +583,11 @@ span {
 
 .card-container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(3, 1fr);
     gap: 2rem;
+    justify-items: center;
     width: 100%;
-    margin: 3rem 0;
+    margin: 3rem 0rem;
 }
 
 .text-shadow {
@@ -630,6 +652,7 @@ span {
     transition-property: transform, opacity;
     box-shadow: 10px 10px 12px rgb(0, 0, 0);
     border: 1px solid rgba(184, 184, 184, 0.338);
+    min-width: 500px;
 }
 
 .flip>.front {
@@ -638,14 +661,14 @@ span {
 
 .flip>.back {
     position: absolute;
-    opacity: 0;
-    /* opacity: 1; */
+    /* opacity: 0; */
+    opacity: 1;
     top: 0px;
     left: 0px;
     width: 100%;
     height: 100%;
-    transform: rotateY(-180deg);
     /* transform: rotateY(-180deg); */
+    /* transform: rotateY(180deg); */
 }
 
 .flip:hover>.front {
@@ -658,7 +681,7 @@ span {
 }
 
 .flip.flip-vertical>.back {
-    transform: rotateX(-180deg);
+    /* transform: rotateX(-180deg); */
     /* transform: rotateX(-180deg); */
 }
 
@@ -675,7 +698,6 @@ span {
     display: inline-block;
     margin-right: 2px;
     margin-bottom: 1em;
-    /* width: 500px; */
 }
 
 .flip>.front,
@@ -694,7 +716,6 @@ span {
 .flip>.front {
     justify-content: flex-end;
 }
-
 
 .flip:nth-of-type(1) .back {
     background:
@@ -1141,71 +1162,5 @@ span {
     display: none;
 }
 
-@media (max-width: 1500px) {}
 
-@media (max-width: 1200px) {}
 
-@media (max-width: 991px) {}
-
-@media (max-width: 768px) {
-
-    .header {
-        height: 8vh;
-    }
-
-    #menu-icon {
-        display: block;
-        cursor: pointer;
-    }
-
-    .navbar {
-        position: absolute;
-        left: 0;
-        top: -101vh;
-        width: 100%;
-        padding: 1rem 3%;
-        background: linear-gradient(to right, #141414, #232526);
-        border-top: .1em solid rgba(0, 0, 0, .2);
-        border-bottom: .2em solid rgba(0, 225, 255, 0.365);
-        box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2);
-        display: none;
-    }
-
-    @keyframes slideDown {
-        from {
-            opacity: 0;
-            transform: translateY(-100vh);
-        }
-
-        to {
-            opacity: 1;
-            transform: translateY(108vh);
-        }
-    }
-
-    .navbar.active {
-        display: block;
-        animation: slideDown 0.6s ease forwards;
-    }
-
-    .navbar a {
-        display: block;
-        margin: 2em 0;
-    }
-
-}
-@media (max-width: 617px) {
-
-}
-
-@media (max-width: 450px) {
-
-}
-
-@media (max-width: 375px) {
-
-}
-
-@media (max-width: 320px) {
-    
-}
